# ic-asset-router

./: AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  MIGRATION.md  PROMPT.md  RALPH.md  README.md  loop.sh
.github/workflows/: test.yml
examples/api-authentication/: Cargo.toml  README.md  dfx.json
examples/api-authentication/src/: lib.rs
examples/api-authentication/src/routes/: customers.rs  index.rs  mod.rs  profile.rs
examples/askama-basic/: Cargo.toml  dfx.json
examples/askama-basic/src/: lib.rs
examples/askama-basic/src/routes/: index.rs
examples/askama-basic/templates/: index.html
examples/cache-invalidation/: Cargo.toml  README.md  dfx.json
examples/cache-invalidation/src/: lib.rs
examples/cache-invalidation/src/routes/: index.rs  mod.rs  (+1 more)
examples/certification-modes/: Cargo.toml  build.rs  dfx.json
examples/certification-modes/src/: lib.rs
examples/custom-404/: Cargo.toml  README.md  custom_404.did  dfx.json
examples/custom-404/src/: lib.rs
examples/htmx-app/: Cargo.toml  README.md  build.rs  dfx.json
examples/htmx-app/src/: __route_tree.rs  data.rs  lib.rs
examples/htmx-app/src/routes/: index.rs  mod.rs
examples/htmx-app/src/routes/posts/: mod.rs
examples/htmx-app/src/routes/posts/:postId/: comments.rs  index.rs  mod.rs
examples/htmx-app/src/routes/posts/_postId/: comments.rs  index.rs  mod.rs
examples/htmx-app/static/: htmx.min.js  style.css
examples/htmx-app/templates/: index.html  layout.html  post.html
examples/htmx-app/templates/partials/: comments.html
examples/json-api/: Cargo.toml  README.md  dfx.json
examples/json-api/src/: data.rs  lib.rs
examples/json-api/src/routes/: index.rs  middleware.rs  mod.rs
examples/json-api/src/routes/items/: index.rs  mod.rs
examples/json-api/src/routes/items/_itemId/: index.rs  mod.rs
examples/react-app/: README.md  dfx.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
examples/react-app/server/: Cargo.toml  build.rs  server.did
examples/react-app/server/src/: data.rs  lib.rs
examples/react-app/server/src/routes/: index.rs  mod.rs  not_found.rs
examples/react-app/server/src/routes/posts/_postId/: index.rs
examples/react-app/src/: main.css  main.tsx  routeTree.gen.ts  server.ts
examples/security-headers/: Cargo.toml  README.md  dfx.json
examples/security-headers/src/: lib.rs
examples/tera-basic/: Cargo.toml  dfx.json
examples/tera-basic/src/: lib.rs
examples/tera-basic/src/routes/: index.rs
examples/tera-basic/src/routes/posts/_postId/: index.rs
examples/tera-basic/templates/: index.html  post.html
macros/: Cargo.toml
macros/src/: lib.rs
specs/: Generate Implementation Plan — Prompt.md  README.md
specs/Phase 1/: 1.1 — Configurable Headers.md  1.2 — Handler-Controlled Response Metadata.md  1.3 — Graceful Error Handling.md  1.4 — Remove Debug Logging.md  1.5 — Wildcard Segment Capture.md  1.6 — Minor Fixes.md  1.7 — Configurable Cache-Control.md  PLAN.md
specs/Phase 2/: 2.1 — HTTP Method Dispatch.md  2.2 — Middleware System.md  2.3 — Custom 404 Response.md  PLAN.md
specs/Phase 3/: 3.1 — Template Engine & HTMX Examples.md  PLAN.md
specs/Phase 4/: 4.1 — TTL-Based Cache Invalidation.md  4.2 — Explicit Invalidation API.md  4.3 — Conditional Regeneration.md  PLAN.md
specs/Phase 5/: 5.1 — Build Script & IDE Ergonomics.md  5.2 — Type-Safe Route Params.md  5.3 — Query String Access & Typed Search Params.md  5.4 — Reserved Filename Validation.md  5.5 — Comprehensive Test Suite.md  5.6 — Documentation & Examples.md  5.7 — PocketIC End-to-End Tests.md  PLAN.md  SESSION.md
specs/Phase 6/: 6.1 — Not-Found Response Certification.md  6.2 — Wildcard Value in RouteContext.md  6.3 — Generated Code Warning Suppression.md  6.4 — Example Migration.md  6.5 — E2E Test Hardening.md  6.6 — Minor Fixes & Cleanup.md  6.7 — Single Certified 404 Fallback.md  6.8 — Expose URL Decode & Form Parse Utilities.md  6.9 — Fix Fragile Template Paths in Examples.md  PLAN.md  SESSION.md
specs/Phase 7/: 7.1 — Define Certification Configuration Types.md  7.2 — Build Asset Router.md  7.3 — Refactor certify_assets for Certification Modes.md  7.4 — Per-Route Certification Configuration.md  7.5 — Documentation and Examples for Certification Modes.md  7.6 — Integration Tests for Certification Modes.md  7.7 — RouteContext Ergonomic Improvements.md  PLAN.md  SESSION.md
specs/Phase 8/: 8.1 — Decompose http_request Functions.md  8.2 — Eliminate Production Panics.md  8.3 — Deduplicate Router and Asset Router Internals.md  8.4 — Harden Build Script.md  8.5 — Route Trie Optimization.md  8.6 — Test Coverage and Edge Cases.md  PLAN.md  SESSION.md
src/: asset_router.rs  assets.rs  build.rs  certification.rs  config.rs  context.rs  lib.rs  middleware.rs  mime.rs  route_config.rs  router.rs
tests/e2e/: Cargo.toml  README.md  build_and_test.sh
tests/e2e/src/: lib.rs
tests/e2e/test_canister/: Cargo.toml  build.rs  dfx.json  test_canister.did
tests/e2e/test_canister/src/: lib.rs
tests/e2e/test_canister/src/routes/: auth_test.rs  index.rs  json.rs  method_test.rs  middleware.rs  mod.rs  not_found.rs  skip_test.rs  ttl_test.rs
tests/e2e/test_canister/src/routes/echo/: mod.rs
tests/e2e/test_canister/src/routes/echo/_path/: index.rs  mod.rs
tests/e2e/test_canister/src/routes/files/: all.rs
tests/e2e/test_canister/src/routes/posts/: mod.rs
tests/e2e/test_canister/src/routes/posts/_postId/: index.rs  mod.rs
tests/e2e/test_canister/static/: style.css
(+21 files in other folders)
