[package]
name = "ic-asset-router"
version = "0.0.0"
edition = "2021"

[lib]

[dependencies]
ic-asset-certification = "3.0.3"
ic-cdk = "0.19"
ic-certification = "3.0.3"
ic-http-certification = "3.0.3"
include_dir = { version = "0.7.4", features = ["glob"] }
serde = "1.0.228"
serde_urlencoded = "0.7.1"

[dev-dependencies]
proptest = "1.10.0"

[features]
default = []
debug-logging = []
