[package]
name = "ic-asset-router"
version = "0.1.1"
edition = "2021"
description = "File-based HTTP routing with IC response certification for Internet Computer canisters"
license = "MIT"
repository = "https://github.com/kristoferlund/ic-asset-router"
readme = "README.md"
keywords = ["internet-computer", "icp", "http", "routing", "certification"]
categories = ["web-programming"]

[lib]

[dependencies]
ic-asset-router-macros = { path = "macros", version = "0.1.1" }
ic-cdk = "0.18.7"
ic-certification = "3.1"
ic-http-certification = "3.1"
include_dir = { version = "0.7.4", features = ["glob"] }
serde = "1.0.228"
serde_json = "1.0"
serde_urlencoded = "0.7.1"
syn = { version = "2", features = ["full", "parsing"] }

[dev-dependencies]
proptest = "1.10.0"

[features]
default = []
debug-logging = []
