[package]
name = "json-api"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.19"
ic-http-certification = "3.0"
ic-asset-router = { path = "../.." }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
ic-asset-router = { path = "../.." }
