[package]
name = "tera-basic"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.18"
ic-asset-router = { path = "../.." }
serde = { version = "1.0", features = ["derive"] }
tera = { version = "1", default-features = false }

[build-dependencies]
ic-asset-router = { path = "../.." }
