[package]
name = "e2e-tests"
version = "0.1.0"
edition = "2021"

[lib]
name = "e2e_tests"
path = "src/lib.rs"

[dependencies]
candid = "0.10"
ic-certificate-verification = "3.1"
ic-certification = "3.1"
pocket-ic = "12.0"
reqwest = { version = "0.12", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
sha2 = "0.10"
hex = "0.4"
