[package]
name = "react-app-server"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.18"
include_dir = { version = "0.7.4", features = ["glob"] }
ic-asset-router = { path = "../../.." }
serde = { version = "1.0", features = ["derive"] }
tera = { version = "1", default-features = false }

[build-dependencies]
ic-asset-router = { path = "../../.." }
