[package]
name = "test-canister"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.18"
ic-http-certification = "3.0"
include_dir = { version = "0.7.4", features = ["glob"] }
ic-asset-router = { path = "../../.." }

[build-dependencies]
ic-asset-router = { path = "../../.." }
